[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Medium.png" type="Texture" id=1]
[ext_resource path="res://Assets/Small.png" type="Texture" id=2]
[ext_resource path="res://Assets/Large.png" type="Texture" id=3]
[ext_resource path="res://Assets/apc.png" type="Texture" id=4]
[ext_resource path="res://Assets/Stacked pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/new_styleboxtexture.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/spcfnt.tres" type="DynamicFont" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00552486, 0.430939, 1 )
colors = PoolColorArray( 0.992157, 0.992157, 0.992157, 1, 0.505882, 0.435294, 0.435294, 0.741176, 0.403922, 0.403922, 0.403922, 0.498039, 1, 1, 1, 0.843137 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1200.0
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 642.5, 343.5 )
scale = Vector2( 80.9375, 43.3125 )
texture = ExtResource( 4 )

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2( 632, 354 )
amount = 1000
lifetime = 700.0
preprocess = 154.13
speed_scale = 4.7
emission_shape = 2
emission_rect_extents = Vector2( 1000, 1000 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
orbit_velocity_random = 1.0
angle = 5.0
angle_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 1 )
hue_variation_random = 0.36

[node name="LightLabel" type="Label" parent="."]
margin_left = 302.0
margin_top = 127.0
margin_right = 656.0
margin_bottom = 142.0
rect_scale = Vector2( 0.549999, 0.986259 )
custom_fonts/font = ExtResource( 8 )
text = "Light Craft"
align = 1
uppercase = true

[node name="MedLabel" type="Label" parent="."]
margin_left = 302.0
margin_top = 186.0
margin_right = 656.0
margin_bottom = 201.0
rect_scale = Vector2( 0.549999, 0.986259 )
custom_fonts/font = ExtResource( 8 )
text = "Medium  Craft"
align = 1
uppercase = true

[node name="LargeLabel" type="Label" parent="."]
margin_left = 304.0
margin_top = 265.0
margin_right = 658.0
margin_bottom = 280.0
rect_scale = Vector2( 0.549999, 0.986259 )
custom_fonts/font = ExtResource( 8 )
text = "Heavy  Craft"
align = 1
uppercase = true

[node name="SelectText" type="Label" parent="."]
margin_left = 46.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 31.0
rect_scale = Vector2( 1.6, 4.10023 )
custom_fonts/font = SubResource( 5 )
text = "Select class of craft"
align = 1
uppercase = true

[node name="ButtonList" type="VBoxContainer" parent="."]
margin_left = 238.0
margin_top = 94.0
margin_right = 387.0
margin_bottom = 296.0
rect_scale = Vector2( 1.24, 1.16 )
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="Light" type="Button" parent="ButtonList"]
margin_top = 9.0
margin_right = 149.0
margin_bottom = 57.0
hint_tooltip = "Characteristics: 
Fast, Single weak laser
Special: Cloak and teleport"
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 2 )
flat = true

[node name="Medium" type="Button" parent="ButtonList"]
margin_top = 61.0
margin_right = 149.0
margin_bottom = 109.0
hint_tooltip = "Characteristics: 
Slower,two med lasers
Special: grapling beam, mines"
custom_fonts/font = SubResource( 3 )
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 1 )
flat = true

[node name="Large" type="Button" parent="ButtonList"]
margin_top = 113.0
margin_right = 149.0
margin_bottom = 193.0
hint_tooltip = "Characteristics: 
Slow, 3 lasers, torpedoes
Special: emp blast"
custom_fonts/font = SubResource( 4 )
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 3 )
flat = true

[connection signal="focus_entered" from="ButtonList/Light" to="." method="_on_Light_focus_entered"]
[connection signal="mouse_entered" from="ButtonList/Light" to="." method="_on_Light_mouse_entered"]
[connection signal="pressed" from="ButtonList/Light" to="." method="_on_Light_pressed"]
[connection signal="pressed" from="ButtonList/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="ButtonList/Large" to="." method="_on_Large_pressed"]
